--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
+        "php": ">=5.4",
         "guzzle/guzzle": "3.7"
+    },
+    "autoload": {
+        "psr-4": {
+            "Evdb\\TelegramPhp\\": "./src"
+        }
     }
 }
